// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Spinner > should render 1`] = `
<div>
  <div
    class="w-8 h-8 rounded-full animate-spin dark:border-black border-[5px] shrink-0 border-theme-secondary-200 border-l-theme-primary-600 dark:border-l-theme-primary-600"
  />
</div>
`;

exports[`Spinner > should render a danger color 1`] = `
<div>
  <div
    class="w-8 h-8 rounded-full animate-spin dark:border-black border-[5px] shrink-0 border-theme-secondary-200 border-l-theme-danger-400 dark:border-l-theme-danger-400"
  />
</div>
`;

exports[`Spinner > should render a hint color 1`] = `
<div>
  <div
    class="w-8 h-8 rounded-full animate-spin dark:border-black border-[5px] shrink-0 border-theme-secondary-200 border-l-theme-hint-500 dark:border-l-theme-hint-500"
  />
</div>
`;

exports[`Spinner > should render a info color 1`] = `
<div>
  <div
    class="w-8 h-8 rounded-full animate-spin dark:border-black border-[5px] shrink-0 border-theme-secondary-200 border-l-theme-primary-600 dark:border-l-theme-primary-600"
  />
</div>
`;

exports[`Spinner > should render a large one 1`] = `
<div>
  <div
    class="w-12 h-12 rounded-full animate-spin dark:border-black border-[5px] shrink-0 border-theme-secondary-200 border-l-theme-primary-600 dark:border-l-theme-primary-600"
  />
</div>
`;

exports[`Spinner > should render a small one 1`] = `
<div>
  <div
    class="w-5 h-5 rounded-full animate-spin dark:border-black border-[5px] shrink-0 border-theme-secondary-200 border-l-theme-primary-600 dark:border-l-theme-primary-600"
  />
</div>
`;

exports[`Spinner > should render a success color 1`] = `
<div>
  <div
    class="w-8 h-8 rounded-full animate-spin dark:border-black border-[5px] shrink-0 border-theme-secondary-200 border-l-theme-success-600 dark:border-l-theme-success-600"
  />
</div>
`;

exports[`Spinner > should render a warning color 1`] = `
<div>
  <div
    class="w-8 h-8 rounded-full animate-spin dark:border-black border-[5px] shrink-0 border-theme-secondary-200 border-l-theme-warning-600 dark:border-l-theme-warning-600"
  />
</div>
`;

exports[`Spinner > should render a warning-alt color 1`] = `
<div>
  <div
    class="w-8 h-8 rounded-full animate-spin border-[5px] shrink-0 border-theme-warning-200 border-l-theme-warning-900 dark:border-theme-secondary-800 dark:border-l-theme-warning-600"
  />
</div>
`;
